# VLG-alpha-0

./: .gitignore  AGENTS.md  CMakeLists.txt  PROJECT_BRIEF.md  README.md  ROADMAP.md  TECHNICAL_PLAN.md
.github/workflows/: windows-build.yml
Docs/Development/: CurrentProjectState.md  DeveloperSetup.md  GitHubActions.md
Docs/QA/: VerticalSliceManualTest.md  VerticalSliceReleaseCandidate.md
Docs/Reviews/: PostMilestone11VerticalSliceReview.md
Docs/Systems/: Basic3DSandbox.md  BuildingPlacement.md  CombatEnemyAI.md  ContextualPromptsGuidance.md  Crafting.md  DataLoadingBuildables.md  DataLoadingConsolidation.md  DataLoadingItems.md  DataLoadingRecipes.md  DebugTextOverlay.md  EngineBootstrap.md  FirstBiomeTestArea.md  ItemsInventory.md  MouseLookInput.md  PlayerControllerInteraction.md  ResourceGathering.md  SaveLoad.md  ShrineObjectiveProgression.md  UIHudFoundation.md  VerticalSlicePolish.md  VerticalSliceStabilisationPass1.md  VerticalSliceStabilisationPass2.md
Engine/Core/: Application.cpp  Application.h  Clock.cpp  Clock.h  GameLayer.cpp  GameLayer.h  Logger.cpp  Logger.h
Engine/Debug/: DebugOverlay.cpp  DebugOverlay.h
Engine/Input/: InputState.cpp  InputState.h
Engine/Math/: Mat4.cpp  Mat4.h  Transform.cpp  Transform.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h
Engine/Platform/: Window.cpp  Window.h
Engine/Renderer/: DebugTextRenderer.cpp  DebugTextRenderer.h  Renderer.cpp  Renderer.h
Engine/Scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h
Game/Data/Buildables/: buildables.txt
Game/Data/Items/: items.txt
Game/Data/Recipes/: recipes.txt
Game/Source/: Interactable.cpp  Interactable.h  Main.cpp  PlayerController.cpp  PlayerController.h  PlayerVitals.cpp  PlayerVitals.h  SandboxGame.cpp  SandboxGame.h
Game/Source/AI/: EnemyAgent.cpp  EnemyAgent.h  EnemyBrain.cpp  EnemyBrain.h  EnemyState.h
Game/Source/Biomes/: BiomeDatabase.cpp  BiomeDatabase.h  BiomeDefinition.cpp  BiomeDefinition.h  BiomeLayoutBuilder.cpp  BiomeLayoutBuilder.h
Game/Source/Building/: BuildPlacementController.cpp  BuildPlacementController.h  BuildPlacementResult.h  BuildableDatabase.cpp  BuildableDatabase.h  BuildableDefinition.h
Game/Source/Combat/: DamageEvent.h  Damageable.cpp  Damageable.h  PlayerCombat.cpp  PlayerCombat.h
Game/Source/Crafting/: CraftingResult.h  CraftingService.cpp  CraftingService.h  RecipeDatabase.cpp  RecipeDatabase.h  RecipeDefinition.cpp  RecipeDefinition.h
Game/Source/Data/: DataTextParser.cpp  DataTextParser.h
Game/Source/Debug/: DebugFormatting.cpp  DebugFormatting.h  DebugHelp.cpp  DebugHelp.h  DebugMessageLog.cpp  DebugMessageLog.h
Game/Source/Guidance/: ContextualPrompt.cpp  ContextualPrompt.h  VerticalSliceGuide.cpp  VerticalSliceGuide.h
Game/Source/Inventory/: Hotbar.cpp  Hotbar.h  Inventory.cpp  Inventory.h  ItemStack.h
Game/Source/Items/: ItemDatabase.cpp  ItemDatabase.h  ItemDefinition.cpp  ItemDefinition.h
Game/Source/Objectives/: ObjectiveDefinition.cpp  ObjectiveDefinition.h  ObjectiveResult.h  ObjectiveState.cpp  ObjectiveState.h  ShrineObjective.cpp  ShrineObjective.h
Game/Source/Progression/: ProgressionFlag.h  ProgressionState.cpp  ProgressionState.h
Game/Source/Resources/: DropTable.cpp  DropTable.h  GatherableNode.cpp  GatherableNode.h  GatheringResult.h
Game/Source/Runtime/: SandboxWorldState.cpp  SandboxWorldState.h
Game/Source/SaveLoad/: SaveData.cpp  SaveData.h  SaveGameService.cpp  SaveGameService.h  SaveResult.h  SaveSerializer.cpp  SaveSerializer.h
Game/Source/UI/: HudFormatter.cpp  HudFormatter.h  HudState.cpp  HudState.h  VerticalSliceHud.cpp  VerticalSliceHud.h
Tests/: EngineCoreTests.cpp  GameCoreTests.cpp
Tests/Game/: GameTestSuite.h  TestBiomes.cpp  TestBuilding.cpp  TestCombat.cpp  TestCrafting.cpp  TestDataTextParser.cpp  TestDebug.cpp  TestGathering.cpp  TestGuidance.cpp  TestInventory.cpp  TestProgressionObjectives.cpp  TestSaveLoad.cpp  TestUI.cpp
